--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ td{padding:20px 26px;color:var(--text);}
           <h4>App / Play Store</h4>
           <p>
             The App / Play Store charge a 32% total fee to act as a Merchant of Record (MoR).
-            This includes the 30% commission plus additional payment processing and FX fees.
+            This includes the 30% commission plus additional fees for refunds and chargebacks.
           </p>
         </div>
     
