--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ td{padding:20px 26px;color:var(--text);}
       <div class="hero-callout">
         <p class="hero-callout-text">
           <strong>Outpost</strong> partners with apps like <strong class="company">Reface</strong>
-          so they can sell <strong>globally</strong> like a local. Move off the App / Play store and offload your tax, compliance, payments and
+          so they can sell <strong>globally</strong> like a local. Move off the App / Play Store and offload your tax, compliance, payments and
           legal obligations to Outpost.
         </p>
       </div>
@@ -253,8 +253,8 @@ td{padding:20px 26px;color:var(--text);}
         <h2 class="section-title">The hidden cost of global expansion</h2>
         <p class="section-subtitle">
           Globals B2C apps are leaving substantial value on the table each year from inefficient payments
-          and tax infrastructure or relying on App / Play stores. We estimate it's costing
-          <span class="company">Reface</span> $<span class="problem-dynamic">2.3M</span> per year in App / Play store fees and other costs.
+          and tax infrastructure or relying on App / Play Stores. We estimate it's costing
+          <span class="company">Reface</span> $<span class="problem-dynamic">2.3M</span> per year in App / Play Store fees and other costs.
         </p>
       </div>
       <div class="grid-3">
@@ -355,7 +355,7 @@ td{padding:20px 26px;color:var(--text);}
         </div>
         <div class="card-value">Payouts & FX</div>
         <div class="card-label">Clean economics</div>
-        <p class="card-description">Transparent settlement and reduced FX drag compared to store rails and generic MoRs.</p>
+        <p class="card-description">Transparent settlement and reduced FX drag compared to Store rails and generic MoRs.</p>
       </div>
 
       <!-- Legal & Ops -->
